--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,14 @@ body {
   background-color: #e2e2e2;
 }
 
+.image {
+  display: block;
+}
+
+.text {
+  display: block;
+}
+
 .img-flex {
   display: block;
   width: 100%;
@@ -55,5 +63,23 @@ a {
   html {
     font-size: 100%;
     line-height: 1.3;
+  }
+}
+
+@media only screen and (min-width: 38em) {
+
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+  }
+
+  .text {
+    display: inline-block;
+    width: 49%;
+  }
+
+  .image {
+    width: 49%;
+    display: inline-block;
   }
 }
