Add media query for 60em

--- a/css/main.css
+++ b/css/main.css
@@ -83,3 +83,19 @@ a {
     display: inline-block;
   }
 }
+
+@media only screen and (min-width: 60em) {
+
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+  .text {
+    vertical-align: middle;
+  }
+
+  .image {
+    vertical-align: middle;
+  }
+}
